--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="/icodeboot/home.html">Home</a>
+                <a class="nav-link active " aria-current="page" href="/icodeboot/home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/icodeboot/about.html">About </a>
+                <a class="nav-link " href="/icodeboot/about.html">About </a>
               </li>
               
               <li class="nav-item dropdown">
